--- a/.github/workflows/hdfeos5.yml
+++ b/.github/workflows/hdfeos5.yml
@@ -1,25 +1,19 @@
-name: hdfeos
+name: hdfeos5 dev
 
 on:
   push:
     branches:
-      - main-
-
+      - main
 jobs:
   build:
-    name: Build hdfeos
     runs-on: ubuntu-latest
     steps:
-      - name: Install Autotools Dependencies (Linux)
-        run: |
-          sudo apt update
-          sudo apt install automake autoconf libtool libtool-bin
       - name: Download HDF-EOS5
+        env:
+          EDL: ${{ secrets.EARTHDATA_LOGIN }}
+          EDP: ${{ secrets.EARTHDATA_PASSWORD }}
         run: |
-          curl -O -b ~/.urs_cookies -c ~/.urs_cookies -L -n "https://git.earthdata.nasa.gov/projects/DAS/repos/hdfeos5/raw/hdf-eos5-2.0-src.tar.gz?at=refs%2Fheads%2FHDFEOS5_2.0"
-          tar zxvf HDF-EOS5.1.16.tar.Z
-          cd hdfeos5
-          ./configure CC=/usr/local/bin/h5cc --prefix=/usr/local/ --enable-install-include
-          make
-          make check
-          sudo make install
+          curl --user $EDL:$EDP -O  -c ~/.urs_cookies -L -n  "https://git.earth\
+data.nasa.gov/projects/DAS/repos/hdfeos5/raw/hdf-eos5-2.0-src.tar.gz?at=refs%2F\
+heads%2FHDFEOS5_2.0"
+          tar zxvf hdf-eos5-2.0-src.tar.gz
