--- a/.github/workflows/hdfeos5.yml
+++ b/.github/workflows/hdfeos5.yml
@@ -13,7 +13,6 @@ jobs:
           EDL: ${{ secrets.EARTHDATA_LOGIN }}
           EDP: ${{ secrets.EARTHDATA_PASSWORD }}
         run: |
-          curl --user $EDL:$EDP -O  -c ~/.urs_cookies -L -n  "https://git.earth\
-data.nasa.gov/projects/DAS/repos/hdfeos5/raw/hdf-eos5-2.0-src.tar.gz?at=refs%2F\
+          curl --user $EDL:$EDP -O  -c ~/.urs_cookies -L -n  "https://git.earth\data.nasa.gov/projects/DAS/repos/hdfeos5/raw/hdf-eos5-2.0-src.tar.gz?at=refs%2F
 heads%2FHDFEOS5_2.0"
           tar zxvf hdf-eos5-2.0-src.tar.gz
