--- a/.github/workflows/hdfeos5.yml
+++ b/.github/workflows/hdfeos5.yml
@@ -14,7 +14,7 @@ jobs:
           EDP: ${{ secrets.EARTHDATA_PASSWORD }}
         run: |
           curl --version
-          curl --user ${{ secrets.EARTHDATA_LOGIN }}:${{secrets.EARTHDATA_PASSWORD  }} -o hdf-eos5-2.0-src.tar.gz  -c ~/urs_cookies -L -n  "https://git.earthdata.nasa.gov/projects/DAS/repos/hdfeos5/raw/hdf-eos5-2.0-src.tar.gz?at=refs%2Fheads%2FHDFEOS5_2.0"
+          curl --user ${{ secrets.EARTHDATA_LOGIN }} -o hdf-eos5-2.0-src.tar.gz  -c ~/urs_cookies -L -n  "https://git.earthdata.nasa.gov/projects/DAS/repos/hdfeos5/raw/hdf-eos5-2.0-src.tar.gz?at=refs%2Fheads%2FHDFEOS5_2.0"
           ls -l
           head  hdf*
 
