--- a/.github/workflows/hdfeos5.yml
+++ b/.github/workflows/hdfeos5.yml
@@ -12,5 +12,5 @@ jobs:
         run: |
           curl --user ${{ secrets.EARTHDATA_LOGIN }} -o hdf-eos5-3.0-src.tar.gz  -L   "https://git.earthdata.nasa.gov/projects/DAS/repos/hdfeos/raw/hdf-eos2-3.0-src.tar.gz?at=3128a738021501c821549955f6c78348e5f33850"
           ls
-          head  hdf*
+          cat hdf*
 
