--- a/.github/workflows/hdfeos5.yml
+++ b/.github/workflows/hdfeos5.yml
@@ -3,14 +3,21 @@ name: hdfeos5 dev
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Download HDF-EOS5
+        shell: bash
+        env:
+          EDL: ${{ secrets.EARTHDATA_LOGIN }}
         run: |
-          curl --user ${{ secrets.EARTHDATA_LOGIN }} -o hdf-eos5-3.0-src.tar.gz  -L   "https://git.earthdata.nasa.gov/projects/DAS/repos/hdfeos/raw/hdf-eos2-3.0-src.tar.gz?at=3128a738021501c821549955f6c78348e5f33850"
+        export EDL2=${{ secrets.EARTHDATA_LOGIN }}
+          curl --user $EDL -o hdf-eos5-3.0-src.tar.gz  -L   "https://git.earthdata.nasa.gov/projects/DAS/repos/hdfeos/raw/hdf-eos2-3.0-src.tar.gz?at=3128a738021501c821549955f6c78348e5f33850"
+          curl --user $EDL2 -o hdf-eos5-3.0-src.tar.gz  -L   "https://git.earthdata.nasa.gov/projects/DAS/repos/hdfeos/raw/hdf-eos2-3.0-src.tar.gz?at=3128a738021501c821549955f6c78348e5f33850"
+          curl --user "${{ secrets.EARTHDATA_LOGIN }}" -o hdf-eos5-3.0-src.tar.gz  -L   "https://git.earthdata.nasa.gov/projects/DAS/repos/hdfeos/raw/hdf-eos2-3.0-src.tar.gz?at=3128a738021501c821549955f6c78348e5f33850"
+
           ls
           cat hdf*
 
