--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -7,9 +7,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Build Fuzzers
+      - name: Run Fuzzers
         id: build
-        uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
+        uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
         with:
-          oss-fuzz-project-name: 'example'
+          oss-fuzz-project-name: 'hdf5'
           language: c++
+       fuzz-seconds: 600
+       output-sarif: true
+       - name: Upload Crash
+         uses: actions/upload-artifact@v3
+         if: failure() && steps.build.outcome == 'success'
+         with:
+           name: artifacts
+           path: ./out/artifacts
+       - name: Upload Sarif
+         if: always() && steps.build.outcome == 'success'
+         uses: github/codeql-action/upload-sarif@v2
+         with:
+          # Path to SARIF file relative to the root of the repository
+          sarif_file: cifuzz-sarif/results.sarif
+          checkout_path: cifuzz-sarif          
