ci(fuzz): fix yml

--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -7,14 +7,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Build Fuzzers
+        id: build
+        uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
+        with:
+          oss-fuzz-project-name: hdf5'
+          language: c++    
       - name: Run Fuzzers
         id: build
         uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
         with:
           oss-fuzz-project-name: 'hdf5'
           language: c++
-       fuzz-seconds: 600
-       output-sarif: true
+         fuzz-seconds: 600
+         output-sarif: true
        - name: Upload Crash
          uses: actions/upload-artifact@v3
          if: failure() && steps.build.outcome == 'success'
@@ -27,4 +33,4 @@ jobs:
          with:
           # Path to SARIF file relative to the root of the repository
           sarif_file: cifuzz-sarif/results.sarif
-          checkout_path: cifuzz-sarif          
+          checkout_path: cifuzz-sarif
