--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -19,7 +19,7 @@ jobs:
         id: build
         uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
         env:
-          PROJECT_SRC_PATH: ./oss-fuzz/projects/hdf5
+          PROJECT_SRC_PATH: ./projects/hdf5
         with:
           oss-fuzz-project-name: 'hdf5'
           language: 'c++'
