--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -18,10 +18,9 @@ jobs:
       - name: Build Fuzzers
         id: build
         uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
-        env:
-          PROJECT_SRC_PATH: ./projects/hdf5
         with:
           oss-fuzz-project-name: 'hdf5'
+          project-src-path: '/home/runner/work/actions/actions/projects/'
           language: 'c++'
           sanitizer: 'memory'
       - name: Run Fuzzers
