ci(fuzz): keep unaffected

--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -20,15 +20,14 @@ jobs:
         uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
         with:
           oss-fuzz-project-name: 'hdf5'
-          language: 'c++'
           sanitizer: 'memory'
           dry-run: false
-
+          keep-unaffected-fuzz-targets: true
       - name: Run Fuzzers
+        id: build
         uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
         with:
           oss-fuzz-project-name: 'hdf5'
-          language: 'c++'
           fuzz-seconds: 600
           output-sarif: true
           sanitizer: 'memory'
