--- a/.github/workflows/nbsd-qxk.yml
+++ b/.github/workflows/nbsd-qxk.yml
@@ -14,13 +14,13 @@ jobs:
         os:
           - name: netbsd
             architecture: x86-64
-            version: '10.0' # 10.0 doesn't work
+            version: '10.0'
             host: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: qkoziol/hdf5
-          ref: fix_semaphore_test_3
+          repository: hyoklee/hdf5
+          ref: develop
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@master
         env:
