ci(fbsd): auto ompi

--- a/.github/workflows/fbsd-auto-ompi.yml
+++ b/.github/workflows/fbsd-auto-ompi.yml
@@ -1,8 +1,8 @@
-name: fbsd ompi
+name: fbsd auto ompi
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
@@ -19,25 +19,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: HDFGroup/hdf5    
+          repository: HDFGroup/hdf5
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.23.0
+        uses: cross-platform-actions/action@v0.25.0
         with:
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
           version: '${{ matrix.os.version }}'
           shell: bash
           run: |
-            sudo pkg install -y perl5
-            sudo pkg install -y cmake
-            sudo pkg install -y openmpi
-            mkdir build
-            cd build
-            cmake \
-            -DSITE:STRING=fbsd-14.0 \
-            -DBUILDNAME:STRING="r/ompi" \
-            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
-            -DHDF5_ENABLE_PARALLEL:BOOL=ON \
-            ..
-            ctest -D Experimental -C Release
+            sudo pkg install -y autoconf automake libtool openmpi
+            ./autogen.sh
+            ./configure --prefix=/tmp --enable-build-mode=production --enable-parallel
+            make
+            make check
+            make install
+            make uninstall
