ci(fbsd): use 14.1

--- a/.github/workflows/fbsd-ompi.yml
+++ b/.github/workflows/fbsd-ompi.yml
@@ -2,7 +2,7 @@ name: fbsd ompi
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
@@ -14,14 +14,14 @@ jobs:
         os:
           - name: freebsd
             architecture: x86-64
-            version: '14.0'
+            version: '14.1'
             host: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           repository: HDFGroup/hdf5    
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.23.0
+        uses: cross-platform-actions/action@v0.25.0
         with:
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
