--- a/.github/workflows/fbsd-ompi.yml
+++ b/.github/workflows/fbsd-ompi.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: HDFGroup/hdf5    
+          repository: HDFGroup/hdf5
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@v0.25.0
         with:
@@ -32,6 +32,8 @@ jobs:
             sudo pkg install -y cmake
             sudo pkg install -y openmpi
             which mpicc
+            ls /usr/local/bin/
+            ls -l /usr/local/bin/mpicc
             mkdir build
             cd build
             cmake \
