ci(fbsd): find mpicc

--- a/.github/workflows/fbsd-auto-ompi.yml
+++ b/.github/workflows/fbsd-auto-ompi.yml
@@ -30,6 +30,7 @@ jobs:
           run: |
             sudo pkg install -y autoconf automake libtool openmpi
             ls -l /usr/local/bin/
+            find /usr -name 'mpicc'
             ./autogen.sh
             ./configure --prefix=/tmp --enable-build-mode=production --enable-parallel --enable-shared CC=/usr/local/bin/mpicc
             which mpicc
