--- a/.github/workflows/fbsd-ompi.yml
+++ b/.github/workflows/fbsd-ompi.yml
@@ -2,7 +2,7 @@ name: fbsd ompi
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
@@ -37,6 +37,7 @@ jobs:
             cd build
             cmake \
             -DSITE:STRING=fbsd-14.0 \
+            -DCMAKE_C_COMPILER=/usr/local/mpi/openmpi/bin/mpicc
             -DBUILDNAME:STRING="r/ompi" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
