--- a/.github/workflows/fbsd-auto-ompi.yml
+++ b/.github/workflows/fbsd-auto-ompi.yml
@@ -29,8 +29,10 @@ jobs:
           shell: bash
           run: |
             sudo pkg install -y autoconf automake libtool openmpi
+            /usr/local/mpi/openmpi/bin/mpicc --version
             ./autogen.sh
-            ./configure --prefix=/tmp --enable-build-mode=production --enable-parallel --enable-shared CC=/usr/local/mpi/openmpi/bin/mpicc
+            export LD_LIBRARY_PATH=/usr/local/mpi/openmpi/lib:$LD_LIBRARY_PATH
+            ./configure --prefix=/tmp --enable-build-mode=production --enable-parallel --enable-shared CC=/usr/local/mpi/openmpi/bin/mpicc LDFLAGS="-L/usr/local/mpi/openmpi/lib"
             make
             make check
             make install
