--- a/.github/workflows/fbsd-ompi.yml
+++ b/.github/workflows/fbsd-ompi.yml
@@ -36,7 +36,7 @@ jobs:
             cd build
             cmake \
             -DSITE:STRING=fbsd-14.0 \
-            -DCMAKE_C_COMPILER=/usr/local/mpi/openmpi/bin/mpicc
+            -DCMAKE_C_COMPILER=/usr/local/mpi/openmpi/bin/mpicc \
             -DBUILDNAME:STRING="r/ompi" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
