--- a/.github/workflows/fbsd-ompi.yml
+++ b/.github/workflows/fbsd-ompi.yml
@@ -31,7 +31,7 @@ jobs:
             sudo pkg install -y perl5
             sudo pkg install -y cmake
             sudo pkg install -y openmpi
-            ls /usr/local/bin/
+            hostname
             mkdir build
             cd build
             cmake \
