--- a/.github/workflows/fbsd-ompi.yml
+++ b/.github/workflows/fbsd-ompi.yml
@@ -32,7 +32,7 @@ jobs:
             sudo pkg install -y cmake
             sudo pkg install -y openmpi
             sudo hostname localhost
-            hostname
+            export NPROCS=2
             mkdir build
             cd build
             cmake \
