ci(vos): use xros

--- a/.github/workflows/vos-auto.yml
+++ b/.github/workflows/vos-auto.yml
@@ -22,9 +22,8 @@ jobs:
     - name: Build
       continue-on-error: true
       run: |
-        brew install xcodesorg/made/xcodes
         xcodebuild -downloadAllPlatforms
         xcodes runtimes
         xcodes runtimes install visionOS
-        export CC="$(xcrun -find -sdk visionos cc)"        
+        export CC="$(xcrun -find -sdk xros cc)"        
         echo $CC
