--- a/.github/workflows/vos-auto.yml
+++ b/.github/workflows/vos-auto.yml
@@ -1,4 +1,4 @@
-name: mac vos auto
+name: vos auto
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build_with_15_OS:
-    name: "Xcode version 15.0.0, Target visionOS [arm64] Target SDK 1.0"
+    name: vos auto
     runs-on: macos-latest
     env:
       PLATFORM: VISIONOS
@@ -23,5 +23,18 @@ jobs:
       continue-on-error: true
       run: |
         xcodes runtimes
-        export CC="$(xcrun -find -sdk xros cc)"        
-        echo $CC
+        export SDK="xros"
+        export ARCH_FLAGS="-arch armv7"
+        export HOST_FLAGS="${ARCH_FLAGS} -miphoneos-version-min=8.0 -isysroot $(xcrun -sdk ${SDK} --show-sdk-path)"
+        export CHOST="arm-apple-darwin"
+        export PREFIX="${HOME}/DEVICE_ARM"
+        export CC="$(xcrun -find -sdk ${SDK} cc)"
+        export CXX="$(xcrun -find -sdk ${SDK} cxx)"
+        export CPP="$(xcrun -find -sdk ${SDK} cpp)"
+        export CFLAGS="${HOST_FLAGS} ${OPT_FLAGS}"
+        export CXXFLAGS="${HOST_FLAGS} ${OPT_FLAGS}"
+        export LDFLAGS="${HOST_FLAGS}"
+        ./autogen.sh
+        ./configure --host=${CHOST} --prefix=${PREFIX} --enable-static --disable-shared --enable-tests=no
+        make -j
+        make install
