--- a/.github/workflows/vos-auto.yml
+++ b/.github/workflows/vos-auto.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build_with_15_OS:
+  build_with_xros:
     name: vos auto
     runs-on: macos-latest
     env:
@@ -18,7 +18,10 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest
-    - name: Build
+    - name: install
+      run: |
+        brew install autoconf automake libaec libtool
+    - name: build
       continue-on-error: true
       run: |
         xcodes runtimes
