--- a/.github/workflows/vos-auto.yml
+++ b/.github/workflows/vos-auto.yml
@@ -35,7 +35,14 @@ jobs:
         export CFLAGS="${HOST_FLAGS} ${OPT_FLAGS}"
         export CXXFLAGS="${HOST_FLAGS} ${OPT_FLAGS}"
         export LDFLAGS="${HOST_FLAGS}"
+        echo $HOST_FLAGS
+        echo $OPT_FLAGS
         ./autogen.sh
         ./configure --host=${CHOST} --prefix=${PREFIX} --enable-static --disable-shared --enable-tests=no
         make -j
         make install
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: config
+        path: ./config.log
