--- a/.github/workflows/arm64-obsd-jxh.yml
+++ b/.github/workflows/arm64-obsd-jxh.yml
@@ -1,8 +1,8 @@
-name: obsd jxh ea et
+name: arm64 obsd jxh d ea et
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
@@ -21,12 +21,12 @@ jobs:
         with:
           environment_variables: FOO BAR
           operating_system: openbsd
-          architecture: x86_64
+          architecture: arm64
           version: '7.5'
           shell: bash
           run: |
             sudo pkg_add cmake
             mkdir build
             cd build
-            cmake -DSITE:STRING="obsd" -DBUILDNAME:STRING="4630/r+ei+et" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" -DHDF5_ENABLE_INSTRUMENT:BOOL=ON -DHDF5_ENABLE_TRACE:BOOL=ON ..
-            ctest -D Experimental -C Release
+            cmake -DSITE:STRING="obsd" -DBUILDNAME:STRING="4630/d+ei+et" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" -DHDF5_ENABLE_INSTRUMENT:BOOL=ON -DHDF5_ENABLE_TRACE:BOOL=ON ..
+            ctest -D Experimental -C Debug
