--- a/.github/workflows/arm64-d.yml
+++ b/.github/workflows/arm64-d.yml
@@ -1,13 +1,13 @@
-name: arm64 obsd d ei et
+name: arm64 d
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: arm64 obsd d ei et
+    name: arm64 d
     steps:
       - uses: actions/checkout@v4
         with:
@@ -27,5 +27,5 @@ jobs:
             sudo pkg_add cmake
             mkdir build
             cd build
-            cmake -DSITE:STRING="obsd.arm64" -DBUILDNAME:STRING="d/ei+et" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" -DHDF5_ENABLE_INSTRUMENT:BOOL=ON -DHDF5_ENABLE_TRACE:BOOL=ON ..
+            cmake -DSITE:STRING="obsd.arm64" -DBUILDNAME:STRING="d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" -DHDF5_ENABLE_INSTRUMENT:BOOL=ON -DHDF5_ENABLE_TRACE:BOOL=ON ..
             ctest -D Experimental -C Debug
