--- a/.github/workflows/spack-hermes.yml
+++ b/.github/workflows/spack-hermes.yml
@@ -36,4 +36,5 @@ jobs:
         make -j8        
         sudo make install
     - name: install hermes
+      run: |    
         spack install --cdash-upload-url https://my.cdash.org/index.php?project=HERMES --cdash-build ubuntu-latest --cdash-site ubu hermes@master
