ci(hermes): use master

--- a/.github/workflows/arm64-d.yml
+++ b/.github/workflows/arm64-d.yml
@@ -2,7 +2,7 @@ name: arm64 d
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
@@ -27,5 +27,5 @@ jobs:
             sudo pkg_add cmake
             mkdir build
             cd build
-            cmake -DSITE:STRING="obsd.arm64" -DBUILDNAME:STRING="d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" -DHDF5_ENABLE_INSTRUMENT:BOOL=ON -DHDF5_ENABLE_TRACE:BOOL=ON ..
+            cmake -DSITE:STRING="obsd.arm64" -DBUILDNAME:STRING="d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5"  ..
             ctest -D Experimental -C Debug
