--- a/.github/workflows/win-icx-d-f.yml
+++ b/.github/workflows/win-icx-d-f.yml
@@ -49,7 +49,9 @@ jobs:
           set SETVARS="%ProgramFiles(x86)%\Intel\oneAPI\setvars.bat"
           call %SETVARS%
           set
+          dir "C:/Program Files (x86)/Intel/oneAPI/compiler/2024.2/bin/"
+          dir "C:/Program Files (x86)/Intel/oneAPI/compiler/latest/bin/"
           mkdir build
           cd build
           cmake -G Ninja -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/compiler/latest/bin/icx.exe" -DCMAKE_CXX_COMPILER="C:/Program Files (x86)/Intel/oneAPI/compiler/latest/bin/icpx.exe" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/compiler/2024.2/bin/ifx.exe"  -DBUILD_SHARED_LIBS:BOOL=ON  -DHDF5_BUILD_FORTRAN:BOOL=ON   -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DHDF5_ENABLE_SUBFILING_VFD:BOOL=OFF -DCTEST_DROP_SITE_INIT=my.cdash.org -DSITE=win -DBUILDNAME="ninja/icx/d/f" -DHDF5_BUILD_FORTRAN:BOOL=ON  .. 
-          ctest  -D Experimental -C Debug
+          REM ctest  -D Experimental -C Debug
