ci(oneapi): add fortran

--- a/.github/workflows/win-icx-d-f.yml
+++ b/.github/workflows/win-icx-d-f.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           git clone --depth=1 https://github.com/oneapi-src/oneapi-ci.git oneapi-ci
           cd oneapi-ci
-          scripts/install_windows.bat ${{ env.WINDOWS_HPCKIT_URL }} ${{ env.WINDOWS_CPP_COMPONENTS }}
+          scripts/install_windows.bat ${{ env.WINDOWS_HPCKIT_URL }} ${{ env.WINDOWS_CPP_COMPONENTS }} ${{ env.WINDOWS_FORTRAN_COMPONENTS }}
       - name: Checkout
         uses: actions/checkout@v4
         with:
