--- a/.github/workflows/spack-hermes-local.yml
+++ b/.github/workflows/spack-hermes-local.yml
@@ -19,8 +19,9 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: HDFGroup/hermes
+        path: ./hermes
     - name: install hermes
       run: |
-        . ./spack/share/spack/setup-env.sh      
-        spack repo add ci/hermes/packages
+        . ./spack/share/spack/setup-env.sh
+        spack repo add hermes/ci/hermes
         spack install --cdash-upload-url https://my.cdash.org/index.php?project=HERMES --cdash-build ubuntu-latest --cdash-site ubu hermes@master
