--- a/.github/workflows/spack-hermes-local.yml
+++ b/.github/workflows/spack-hermes-local.yml
@@ -18,7 +18,7 @@ jobs:
     - name: checkout hermes
       uses: actions/checkout@v3
       with:
-        repository: HDFGroup/hermes
+        repository: hyoklee/hermes
         path: ./hermes
     - name: install hermes
       run: |
