--- a/.github/workflows/spack-hermes-local.yml
+++ b/.github/workflows/spack-hermes-local.yml
@@ -24,8 +24,8 @@ jobs:
       run: |
         . ./spack/share/spack/setup-env.sh
         spack repo add hermes/ci/hermes
-        spack install hermes+vfd+mpiio^mpich@3.3.2@master
-        spack load hermes+vfd+mpiio^mpich@3.3.2@master
+        spack install hermes@master+vfd+mpiio^mpich@3.3.2
+        spack load hermes@master+vfd+mpiio^mpich@3.3.2
         cd hermes
         mkdir build
         cd build
