--- a/.github/workflows/jarvis.yml
+++ b/.github/workflows/jarvis.yml
@@ -20,6 +20,7 @@ jobs:
         pip install -e . -r requirements.txt
         which jarvis
         export PATH=/home/runner/.local/bin:$PATH
+	/home/runner/.local/bin/jarvis
         javris
     - name: test jarvis
       run: |
